bug fix of HiveWriter